--- a/src/app/features/crm/components/service-desk/request-status/request-status.component.html
+++ b/src/app/features/crm/components/service-desk/request-status/request-status.component.html
@@ -35,11 +35,11 @@
               ><i class="fa-solid fa-plus" (click)="openServiceRequestStatusModal()"></i
               ></span>
               <span class="icon-circle"
-              ><i class="pi pi-pencil"></i
+              ><i class="pi pi-pencil" (click)="editRequestStatus()"></i
               ></span>
               <span class="icon-circle"
               ><i
-                class="fa-regular fa-trash-can"></i
+                class="fa-regular fa-trash-can" (click)="deleteRequestStatus()"></i
               ></span>
             </div>
           </div>
@@ -61,32 +61,26 @@
           [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
           responsiveLayout="stack"
           [scrollable]="true"
+          [(selection)]= "selectedRequestStatus"
           selectionMode="single"
-          dataKey="code"
+          dataKey="srsCode"
           scrollHeight="400px"
           currentPageReportTemplate="{first} - {last} of {totalRecords}"
-          [globalFilterFields]="['campaign.campaignName']"
+          [globalFilterFields]="['srsMainStatus', 'srsShortDescription', 'srsName']"
         >
 
           <ng-template pTemplate="header">
             <tr>
-              <th pSortableColumn="campaign.campaignName">{{'serviceDesk.mainStatus'| translate }} <p-sortIcon field="campaign.campaignName"></p-sortIcon></th>
-              <th pSortableColumn="campaign.objective">{{'serviceDesk.shortDescription'| translate }} <p-sortIcon field="campaign.objective"></p-sortIcon></th>
-              <th pSortableColumn="campaign.description">{{'serviceDesk.statusName'| translate }} <p-sortIcon field="campaign.description"></p-sortIcon></th>
+              <th pSortableColumn="srsMainStatus">{{'serviceDesk.mainStatus'| translate }} <p-sortIcon field="srsMainStatus"></p-sortIcon></th>
+              <th pSortableColumn="srsShortDescription">{{'serviceDesk.shortDescription'| translate }} <p-sortIcon field="srsShortDescription"></p-sortIcon></th>
+              <th pSortableColumn="srsName">{{'serviceDesk.statusName'| translate }} <p-sortIcon field="srsName"></p-sortIcon></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-requestStatus>
-            <tr class="custom-table">
-              <td>
-
-              </td>
-              <td>
-
-              </td>
-              <td>
-
-              </td>
-
+            <tr [pSelectableRow]="requestStatus">
+              <td>{{requestStatus?.srsMainStatus | titlecase}}</td>
+              <td>{{requestStatus?.srsShortDescription | titlecase}}</td>
+              <td>{{requestStatus?.srsName | titlecase}}</td>
             </tr>
           </ng-template>
           <ng-template pTemplate="emptymessage">
@@ -143,8 +137,8 @@
             <div class="col-md-6">
               <label for="status" class="form-label">Main status</label>
               <select class="form-select" id="status" formControlName="status">
-                <option value=""></option>
-                <option value=""></option>
+                <option  *ngFor="let status of mainStatusData"
+                  [value]="status">{{status}}</option>
               </select>
             </div>
           </div>
