--- a/src/app/features/gis/components/policy/components/policy-subclasess-clauses/policy-subclasess-clauses.component.html
+++ b/src/app/features/gis/components/policy/components/policy-subclasess-clauses/policy-subclasess-clauses.component.html
@@ -125,7 +125,7 @@
 
 
 
-        <!-- Add Policy Clauses  Modal -->
+        <!-- Add Policy subclass Clauses  Modal -->
         <div class="modal fade" id="addPolicySubclassClauses" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered ">
@@ -187,7 +187,7 @@
                 </div>
             </div>
         </div>
-        <!-- Edit Policy Clauses  Modal -->
+        <!-- Edit Policy subclass Clauses  Modal -->
         <div class="modal fade" id="editPolicySubclassClauses" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -231,7 +231,7 @@
                 </div>
             </div>
         </div>
-        <!-- Delete Policy clauses Modal -->
+        <!-- Delete Policy subclass clauses Modal -->
         <div class="modal fade" id="deletePolicySubclassClauses" tabindex="-1" role="dialog" aria-labelledby="deleteTax"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
