--- a/src/app/features/gis/components/policy/components/client-dd-details/client-dd-details.component.css
+++ b/src/app/features/gis/components/policy/components/client-dd-details/client-dd-details.component.css
@@ -1,8 +1,9 @@
-.title{
+.title {
     color: #00529B;
     font-size: 16px;
     font-weight: 500;
 }
+
 #icon {
     background-color: #E4E7EB;
     border-radius: 100px;
@@ -12,42 +13,56 @@
 #icon i {
     color: #00529B;
 }
-#modalTitle{
-    font-size:20px
+
+#modalTitle {
+    font-size: 18px;
+    color: #00529B;
 
 }
-::ng-deep .p-dropdown{
+
+::ng-deep .p-dropdown {
     height: 53%;
     width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.20);
     border-radius: 4px;
-    }
-    ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
-    padding:3px;
+}
+
+::ng-deep .p-dropdown .p-dropdown-label.p-placeholder {
+    padding: 3px;
 
 
-    }
+}
 
-    ::ng-deep
-    .p-dropdown .p-dropdown-label {
-        padding: 3px;
-        font-size: 14px;
-        color: #000;
-    }
+::ng-deep .p-dropdown .p-dropdown-label {
+    padding: 3px;
+    font-size: 14px;
+    color: #000;
+}
 
-    ::ng-deep
-    .p-dropdown-filter {
-        width: 100%;
-        height: 30px;
-        border-radius: 4px;
-    }
-    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
-      font-size: 14px;
-      color: #000;
-      padding:3px 20px;
-      font-family: Roboto;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-    }
+::ng-deep .p-dropdown-filter {
+    width: 100%;
+    height: 30px;
+    border-radius: 4px;
+}
+
+::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item {
+    font-size: 14px;
+    color: #000;
+    padding: 3px 20px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.flexible-header {
+    white-space: nowrap;
+    width: auto;
+    text-align: left;
+}
+
+
+.ui-datatable th,
+.ui-datatable td {
+    white-space: nowrap;
+}
