--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -585,7 +585,7 @@
                                     <ng-template pTemplate="body" let-riskDetails let-ri="rowIndex">
                                         <tr [pSelectableRow]="riskDetails"
                                             [class.p-highlight]="riskDetails === selectedRisk"
-                                            (click)="getRiskClauses();getRiskPeril();getSubclassPerils();getRelatedRisks();getSchedules();getCommissions();getallCertificates()">
+                                            (click)="getRiskClauses();getRiskPerils();getSubclassPerils();getRelatedRisks();getSchedules();getCommissions();getallCertificates()">
                                             <td class="flexible-header">{{riskDetails.propertyId}}</td>
                                             <td class="flexible-header"></td>
                                             <td class="flexible-header">{{riskDetails.propertyDescription}}</td>
@@ -658,7 +658,8 @@
                                                 <div class="row  mb-2">
 
                                                     <!-- <div class="col-sm-3"></div> -->
-                                                    <div class="col-3" *ngIf="isScheduleDetailOpen && !scheduleDetailsExist">
+                                                    <div class="col-3"
+                                                        *ngIf="isScheduleDetailOpen && !scheduleDetailsExist">
                                                         <button type="button" id="icon" class="btn btn-success"
                                                             title="add">
                                                             <i class="fa-solid fa-plus"></i>
@@ -885,9 +886,12 @@
                                                                                         id="scheduleInput"
                                                                                         formControlName="yearOfManufacture">
                                                                                         <option value=""></option>
-                                                                                        <option *ngFor="let year of modelYear" [value]="year">{{ year }}</option>
+                                                                                        <option
+                                                                                            *ngFor="let year of modelYear"
+                                                                                            [value]="year">{{ year }}
+                                                                                        </option>
                                                                                     </select>
-                                                                                   
+
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -901,7 +905,7 @@
                                                                                     id="scheduleLabel">{{'gis.quotation.seating_capacity'
                                                                                     | translate}}</label>
                                                                                 <div class="col-7">
-                                                                                    
+
                                                                                     <input type="number"
                                                                                         id="scheduleInput"
                                                                                         class="form-control form-control-sm mb-1"
@@ -2257,8 +2261,8 @@
                                                             | translate}}
                                                         </p>
                                                     </div>
-                                                    <p-table [value]="subclassPerilList" dataKey="code"
-                                                        selectionMode="single" [(selection)]="selectedPeril"
+                                                    <p-table [value]="riskPerilList" dataKey="code"
+                                                        selectionMode="single" [(selection)]="selectedRiskPeril"
                                                         styleClass="p-datatable-sm" responsiveLayout="scroll"
                                                         class='ui-datatable' [autoLayout]="true">
                                                         <ng-template pTemplate="header">
@@ -2270,9 +2274,11 @@
                                                             </tr>
                                                         </ng-template>
                                                         <ng-template pTemplate="body" let-data let-ri="rowIndex">
-                                                            <tr [pSelectableRow]="data" (click)="getSingleRiskPeril()">
-                                                                <td>{{data.shortDescription}}</td>
-                                                                <td>{{data.fullDescription}}</td>
+                                                            <tr [pSelectableRow]="data"
+                                                                [class.p-highlight]="data === selectedRiskPeril"
+                                                                (click)="onRiskPerilSelected(selectedRiskPeril)">
+                                                                <td>{{data.perilDescription}}</td>
+                                                                <td>{{data.description}}</td>
                                                                 <td>{{data.perilType}}</td>
                                                             </tr>
 
@@ -2281,7 +2287,7 @@
 
                                                     <div class="d-flex justify-content-end mt-4 mb-4">
                                                         <button type="button" class="btn btn-primary"
-                                                            data-bs-dismiss="modal">{{'crm.save_details' |
+                                                            data-bs-dismiss="modal" (click)="addRiskPeril()">{{'crm.save_details' |
                                                             translate}}</button>
                                                     </div>
 
@@ -3333,7 +3339,9 @@
 
                                         <p-table #dt2 [value]="relatedRiskList" dataKey="code" selectionMode="single"
                                             [(selection)]="selectedSchedule" [tableStyle]="{'min-width': '50rem'}"
-                                            responsiveLayout="scroll" [autoLayout]="true">
+                                            responsiveLayout="scroll" [autoLayout]="true"
+                                            [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
+                                            currentPageReportTemplate=" {first} - {last} of {totalRecords}">
 
 
                                             <ng-template pTemplate="header">
@@ -3807,7 +3815,7 @@
                     <app-client-dd-details></app-client-dd-details>
                 </ng-container>
 
-                 <!-- POLICY TAXES DETAILS -->
+                <!-- POLICY TAXES DETAILS -->
                 <ng-container *ngIf="selectedItem === 3">
                     <app-policy-taxes></app-policy-taxes>
                 </ng-container>
