ability to upload documents in 360 view

--- a/src/app/features/entities/components/entity/view-entity/view-entity2.component.html
+++ b/src/app/features/entities/components/entity/view-entity/view-entity2.component.html
@@ -36,6 +36,7 @@
             [wealthAmlDetails]="wealthAmlDetails"
             [nokList]="nokDetails"
             [states]="states"
+            [entityPartyIdDetails]="entityPartyIdDetails"
             (refreshData)="refreshData()"
           ></app-entity-other-details>
         </ng-container>
