--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
@@ -674,18 +674,7 @@
   </ng-container>
 </p-tabView>
 
-<div class="row">
-  <h5>
-    Documents Attached
-    <button class="btn btn-light btn-sm ms-4">Upload file</button>
-    <button class="btn btn-primary btn-sm ms-4">Choose file</button>
-  </h5>
-  <ul>
-    <li>ID Card</li>
-    <li>Birth Certificate</li>
-    <li>Passport</li>
-  </ul>
-</div>
+<app-entity-docs [partyAccountDetails]="partyAccountDetails" [entityPartyIdDetails]="entityPartyIdDetails"></app-entity-docs>
 
 <!--Edit Modal-->
 <div
