--- a/src/app/features/gis/components/policy/components/external-claims/external-claims.component.css
+++ b/src/app/features/gis/components/policy/components/external-claims/external-claims.component.css
@@ -22,7 +22,7 @@
 }
 #modalTitle {
     font-weight: 500;
-    font-size: 17px;
+    font-size: 18px;
     color: #00529B;
 }
 .subheading {
@@ -43,3 +43,54 @@
     line-height: normal;
     text-align: center;
 }
+.external-claim-label {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
+.external-claim-input {
+    height: 33px;
+}
+.selectInput {
+    height: 25px;
+    border-radius: 4px;
+}
+::ng-deep .p-dropdown{
+    height: 33px;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    border-radius: 4px;
+    }
+    ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
+    padding:3px;
+
+
+    }
+
+    ::ng-deep
+    .p-dropdown .p-dropdown-label {
+        padding: 3px;
+        font-size: 14px;
+        color: #000;
+    }
+
+    ::ng-deep
+    .p-dropdown-filter {
+        width: 100%;
+        height: 30px;
+        border-radius: 4px;
+    }
+    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+      font-size: 14px;
+      color: #000;
+      padding:3px 20px;
+      font-family: Roboto;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
