VQ-3341: Ability to View Internal claims Experience(Policy Summary - Risk Details)

--- a/src/app/features/gis/components/policy/components/external-claims/external-claims.component.html
+++ b/src/app/features/gis/components/policy/components/external-claims/external-claims.component.html
@@ -80,7 +80,7 @@
                     <td>{{externalClaimList.claimPaid}}</td>
                     <td>{{externalClaimList.remarks}}</td>
                     <td>{{externalClaimList.noAcc}}</td>
-                    <td>{{externalClaimList.damageAmount |number}}</td>
+                    <td  class="text-end">{{externalClaimList.damageAmount |number}}</td>
                 </tr>
             </ng-template>
             <ng-template pTemplate="emptymessage">
